第二次提交

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link type="text/css" rel="stylesheet" href="./static/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="./static/css/ShopShow.css" />
+    <link rel="stylesheet" type="text/css" href="./static/css/MagicZoom.css" />
     <script src="https://cdn.staticfile.org/axios/0.18.0/axios.min.js"></script>
     <!--[if IE 6]>
     <script src="js/iepng.js" type="text/javascript"></script>
@@ -16,6 +18,7 @@
 
     <script type="text/javascript" src="./static/js/jquery-1.8.2.min.js"></script>
     <script type="text/javascript" src="./static/js/menu.js"></script>
+    <script type="text/javascript" src="./static/js/num.js"></script>
 
     <script type="text/javascript" src="./static/js/select.js"></script>
 
